# mt-renderer

./: Cargo.toml  build.rs  flake.nix
src/: camera.rs  crc.rs  debug_overlay.rs  dti.rs  dti.txt  input_state.rs  lib.rs  main.rs  model.rs  mtserializer.rs  rarchive.rs  renderer_app_manager.rs  resource_manager.rs  rgui.rs  rguimessage.rs  rmaterial.rs  rmodel.rs  rscheduler.rs  rshader2.rs  rshaderpackage.rs  rtexture.rs  shader.wgsl  texture.rs
src/shaders/: debug_ids.wgsl  debug_overlay.wgsl  textured.wgsl  textureviewer.wgsl
src/util/: hexdump.rs  mod.rs  read_struct.rs
