[package]
name = "mt-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = false

[dependencies]
anyhow = "1.0.80"
env_logger = "0.11.2"
flate2 = "1.0.28"
glam = "0.25.0"
log = "0.4.20"
phf = "0.11.2"
pollster = "0.3.0"
strum = { version = "0.26.2", features = ["derive"] }
wgpu = "0.19.1"
winit = "0.29.10"
zerocopy = { version = "0.7.33", features = ["derive"] }

[build-dependencies]
phf_codegen = "0.11.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
